--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 recursive-include pymoo *.py *.cpp
 recursive-exclude pymoo *.so *.pyx *.pxd
 
-include setup.py setup_ext.py LICENSE Makefile
+include LICENSE Makefile
