Changed to Compilation on TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 
 install:
   - pip install numpy
+  - python setup.py build_ext --inplace
   - python setup.py sdist
   - pip install dist/*.tar.gz
 
