Added running metric and termination

--- a/doc/github/README.template
+++ b/doc/github/README.template
@@ -24,11 +24,14 @@ Meanwhile, if you have used our framework for research purposes, please cite us 
 
 ::
 
-   @misc{pymoo,
-       author = {Julian Blank and Kalyanmoy Deb},
-       title = {pymoo - {Multi-objective Optimization in Python}},
-       howpublished = {https://pymoo.org}
-   }
+    @misc{pymoo,
+        title={pymoo: Multi-objective Optimization in Python},
+        author={Julian Blank and Kalyanmoy Deb},
+        year={2020},
+        eprint={2002.04504},
+        archivePrefix={arXiv},
+        primaryClass={cs.NE}
+    }
 
 
 
