Documentation for Permutations

--- a/doc/github/README.template
+++ b/doc/github/README.template
@@ -110,12 +110,12 @@ Meanwhile, if you have used our framework for research purposes, please cite us 
 
     @ARTICLE{pymoo,
         author={J. {Blank} and K. {Deb}},
-        title={pymoo: Multi-objective Optimization in Python},
         journal={IEEE Access},
+        title={Pymoo: Multi-Objective Optimization in Python},
         year={2020},
-        volume={},
+        volume={8},
         number={},
-        pages={1-1}
+        pages={89497-89509},
     }
 
 
