--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include pymoo *.py *.cpp
+recursive-include pymoo *.py *.cpp *.pf
 recursive-exclude pymoo *.so *.pyx *.pxd
 
 include LICENSE Makefile
