--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
+          pip install pytest
       - name: Run tests with pytest
         run: pytest tests/test_performance_indicator.py 
