--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
           pip install .
           pip install pytest
       - name: Run tests with pytest
-        run: pytest tests/test_performance_indicator.py 
+        run: pytest
