--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -24,6 +24,6 @@ jobs:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist bdist_wheel
+        python setup.py sdist
         twine upload --repository testpypi dist/*
 
