--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -6,7 +6,30 @@ on:
       - release
       
 jobs:
+
+  build:
+  runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.7', '3.8', '3.9']
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel numpy
+    - name: Build
+      run: |
+        python setup.py sdist bdist_wheel
+
+
   deploy:
+    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -14,16 +37,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine numpy
-    - name: Build and publish
+        python-version: '3.9'
+    - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist
         twine upload --repository testpypi dist/*
 
