--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -37,7 +37,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.8'
+    - name: Install dependencies
+      run: |
+	python -m pip install --upgrade pip
+	pip install twine
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
