--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -26,6 +26,10 @@ jobs:
     - name: Build
       run: |
         python setup.py sdist bdist_wheel
+    - uses: actions/upload-artifact@master
+      with:
+        name: dist
+        path: dist
 
 
   deploy:
