--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         python-version: ['3.7', '3.8', '3.9']
     steps:
     - uses: actions/checkout@v2
