--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -23,9 +23,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel numpy
-    - name: Build
-      run: |
-        python setup.py sdist bdist_wheel
+    - uses: knicknic/os-specific-run@v1
+      with:
+        linux: python setup.py sdist 
+        macos: python setup.py bdist_wheel
+        windows: python setup.py bdist_wheel
     - uses: actions/upload-artifact@v2
       with:
         name: dist
