--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.7', '3.8', '3.9']
+        exclude:
+          - os: ubuntu-latest
+            python-version: ['3.7', 3.8]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -55,5 +58,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install twine
-        twine upload --repository testpypi dist/*
+        twine upload --skip-existing --repository testpypi dist/*
 
