--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: ['3.7', '3.8', '3.9']
         exclude:
           - os: ubuntu-latest
-            python-version: ['3.7', 3.8]
+            python-version: '3.7'
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
