--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -1,8 +1,9 @@
-name: rc
+name: Release
 
 on:
   push:
     branches:
+      - master
       - release
       
 jobs:
@@ -22,6 +23,23 @@ jobs:
           pip install pytest
       - name: Run tests
         run: pytest tests/test_performance_indicator.py
+
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Create the Documentation
+        run: |
+          python -m pip install --upgrade pip
+          cd doc
+          pip install -r requirements.txt
+          make html
+
+      
 
   # build:
   #   needs: tests
