--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Run tests
         run: pytest tests/test_performance_indicator.py
 
-  tests:
+  docs:
+    needs: tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
