--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -8,21 +8,21 @@ on:
       
 jobs:
 
-  tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
-          pip install pytest
-      - name: Run tests
-        run: pytest tests/test_performance_indicator.py
+  # tests:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Install Python
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.9
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install .
+  #         pip install pytest
+  #     - name: Run tests
+  #       run: pytest tests/test_performance_indicator.py
 
   docs:
     needs: tests
