--- a/.github/workflows/rc.yml
+++ b/.github/workflows/rc.yml
@@ -34,6 +34,7 @@ jobs:
           python-version: 3.9
       - name: Create the Documentation
         run: |
+          sudo apt-get install pandoc
           python -m pip install --upgrade pip
           cd doc
           pip install -r requirements.txt
