--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -53,7 +53,6 @@ jobs:
       
 
   build:
-    needs: tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -62,6 +61,7 @@ jobs:
         exclude:
           - os: ubuntu-latest
             python-version: '3.7'
+          - os: ubuntu-latest
             python-version: '3.8'
     steps:
     - uses: actions/checkout@v2
