--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -104,5 +104,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install twine
-        twine upload --skip-existing --repository testpypi dist/*
+        twine upload --skip-existing dist/*
 
