--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
+          rm -rf pymoo
           pip install pytest
-      - name: Run tests with pytest
-        run: pytest
+      - name: Run Tests
+        run: pytest tests/test_performance_indicator.py
