--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,21 +7,22 @@ on:
       
 jobs:
 
-  # tests:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Install Python
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: 3.9
-  #     - name: Install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install .
-  #         pip install pytest
-  #     - name: Run tests
-  #       run: pytest tests/test_performance_indicator.py
+   tests:
+     runs-on: ubuntu-latest
+     steps:
+       - uses: actions/checkout@v2
+       - name: Install Python
+         uses: actions/setup-python@v2
+         with:
+           python-version: 3.9
+       - name: Install Dependencies
+         run: |
+           python -m pip install --upgrade pip
+           pip install .
+           rm -rf pymoo
+           pip install pytest
+       - name: Run tests
+         run: pytest tests/test_performance_indicator.py
 
 
   docs:
@@ -43,7 +44,7 @@ jobs:
         uses: trendyminds/github-actions-rsync@master
         with:
           RSYNC_OPTIONS: -avzr --delete --exclude '*.ipynb'
-          RSYNC_TARGET: /home/blankjul/pymoo.org/${{BRANCH_NAME}}
+          RSYNC_TARGET: /home/blankjul/pymoo.org/$(echo $GITHUB_REF | cut -d'/' -f 3)
           RSYNC_SOURCE: /doc/build/html/*
         env:
           SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
