--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,22 +7,22 @@ on:
       
 jobs:
 
-   tests:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v2
-       - name: Install Python
-         uses: actions/setup-python@v2
-         with:
-           python-version: 3.9
-       - name: Install Dependencies
-         run: |
-           python -m pip install --upgrade pip
-           pip install .
-           rm -rf pymoo
-           pip install pytest
-       - name: Run tests
-         run: pytest tests/test_performance_indicator.py
+  testing:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
+          rm -rf pymoo
+          pip install pytest
+      - name: Run Tests
+        run: pytest tests/test_performance_indicator.py
 
 
   docs:
