--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -13,11 +13,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install pytest
+      - name: Install pymoo
+        run: |
           pip install .
           rm -rf pymoo
-          pip install pytest
       - name: Run Tests
         run: pytest
