--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r pymoo/requirements.txt
+          pip install -r Cython numpy
           pip install -r tests/requirements.txt
       - name: Install pymoo
         run: |
