--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,14 +15,17 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install numpy
+          pip install -r tests/requirements.txt
+      - name: Install pymoo
+        run: |
           pip install .
           rm -rf pymoo
-          pip install pytest
       - name: Run Tests
-        run: pytest tests/test_performance_indicator.py
+        run: pytest
 
 
   docs:
@@ -33,12 +36,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Create Documentation
+      - name: Install Dependencies
         run: |
           sudo apt-get install pandoc rsync
           python -m pip install --upgrade pip
+          pip install -r doc/requirements.txt
+      - name: Create Documentation
+        run: |
           cd doc
-          pip install -r requirements.txt
           make html
       - name: Upload Documentation
         uses: trendyminds/github-actions-rsync@master
