--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,25 +5,25 @@ on:
       - develop
 
 jobs:
-  testing:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Python 3
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install numpy
-          pip install -r tests/requirements.txt
-      - name: Install pymoo
-        run: |
-          pip install .
-          rm -rf pymoo
-      - name: Run Tests
-        run: pytest
+#  testing:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Install Python 3
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.9
+#      - name: Install Dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install numpy
+#          pip install -r tests/requirements.txt
+#      - name: Install pymoo
+#        run: |
+#          pip install .
+#          rm -rf pymoo
+#      - name: Run Tests
+#        run: pytest
 
   docs:
     needs: testing
@@ -39,6 +39,7 @@ jobs:
           sudo apt-get install pandoc rsync
           python -m pip install --upgrade pip
           pip install -r doc/requirements.txt
+          pip install numpy scipy matplotlib
       - name: Create Documentation
         run: |
           cd doc
