--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,7 +26,6 @@ jobs:
 #        run: pytest
 
   docs:
-    needs: testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -39,7 +38,7 @@ jobs:
           sudo apt-get install pandoc rsync
           python -m pip install --upgrade pip
           pip install -r doc/requirements.txt
-          pip install numpy scipy matplotlib
+          pip install numpy matplotlib autograd
       - name: Create Documentation
         run: |
           cd doc
