--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get install pandoc rsync
           python -m pip install --upgrade pip
           pip install -r doc/requirements.txt
-          pip install numpy matplotlib autograd
+          pip install numpy matplotlib autograd scipy
       - name: Create Documentation
         run: |
           cd doc
