--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -72,7 +72,7 @@ jobs:
        uses: trendyminds/github-actions-rsync@master
        with:
          RSYNC_OPTIONS: -avzr --delete --exclude '*.ipynb'
-         RSYNC_TARGET: /home/releases/${BRANCH_NAME}
+         RSYNC_TARGET: /home/blankjul/releases/${BRANCH_NAME}
          RSYNC_SOURCE: /dist/*
        env:
          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
