Building only in Release Branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,6 @@ on:
       - release
 
 
-
 jobs:
 
   testing:
@@ -76,34 +75,33 @@ jobs:
        uses: trendyminds/github-actions-rsync@master
        with:
          RSYNC_OPTIONS: -avzr --delete --exclude '*.ipynb'
-         RSYNC_TARGET: /home/blankjul/releases/${BRANCH_NAME}
+         RSYNC_TARGET: /home/blankjul/releases/${BRANCH_NAME}/
          RSYNC_SOURCE: /dist/*
        env:
          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
          SSH_USERNAME: ${{secrets.SSH_USERNAME}}
          SSH_HOSTNAME: ${{secrets.SSH_HOSTNAME}}
 
+  deploy:
+     needs: build
+     runs-on: ubuntu-latest
 
-  # deploy:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/download-artifact@v2
-  #     with:
-  #       name: dist
-  #       path: dist
-  #   - name: Set up Python
-  #     uses: actions/setup-python@v2
-  #     with:
-  #       python-version: '3.8'
-  #   - name: Publish
-  #     env:
-  #       TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-  #       TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-  #     run: |
-  #       python -m pip install --upgrade pip
-  #       pip install twine
-  #       twine upload --skip-existing --repository testpypi dist/*
+     steps:
+     - uses: actions/checkout@v2
+     - uses: actions/download-artifact@v2
+       with:
+         name: dist
+         path: dist
+     - name: Set up Python
+       uses: actions/setup-python@v2
+       with:
+         python-version: '3.9'
+     - name: Publish
+       env:
+         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+       run: |
+         python -m pip install --upgrade pip
+         pip install twine
+         twine upload --skip-existing --repository testpypi dist/*
 
