--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,7 @@ jobs:
     needs: testing
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - uses: RalfG/python-wheels-manylinux-build@v0.3.4
       with:
         python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
