--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,14 +62,17 @@ jobs:
          name: dist
          path: dist
 
+
   build-manylinux:
     needs: testing
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: RalfG/python-wheels-manylinux-build@v0.3.4
+    - uses: RalfG/python-wheels-manylinux-build@v0.3.4-ibellbelli/manylinuxclang
       with:
-        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
+        python-versions: 'cp37-cp37m cp38-cp38m cp39-cp39m'
+        build-requirements: 'cython numpy'
+        pip-wheel-args: '-w ./dist --no-deps'
     - uses: actions/upload-artifact@v2
       with:
         name: dist
