--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,9 +68,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: RalfG/python-wheels-manylinux-build@v0.3.4-ibellbelli/manylinuxclang
+    - uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2010_x86_64
       with:
-        python-versions: 'cp37-cp37m cp38-cp38m cp39-cp39m'
+        python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
         build-requirements: 'cython numpy'
         pip-wheel-args: '-w ./dist --no-deps'
     - uses: actions/upload-artifact@v2
