--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,9 @@ jobs:
         python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
         build-requirements: 'cython numpy'
         pip-wheel-args: '-w ./dist --no-deps'
+    - name: Remove non-compatible packages
+      run: |
+        rm dist/*linux_x86_64.whl
     - uses: actions/upload-artifact@v2
       with:
         name: dist
