Remote Loader Update

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-recursive-include pymoo *.py *.cpp *.pf
-recursive-exclude pymoo *.so *.pyx *.pxd
-recursive-exclude pymoo/problems/pf/DASCMOP *.pf
-
+recursive-include pymoo *.py *.cpp
+recursive-exclude pymoo *.so *.pyx *.pxd *.pf
+recursive-exclude pymoo/cache *
 include LICENSE Makefile
