--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,14 +1,13 @@
 numpy
-sphinx<4
+matplotlib
+jinja2==3
+sphinx==3.5.4
+pydata-sphinx-theme==0.4.0
+sphinxcontrib-bibtex<2.0.0
 numpydoc
 nbsphinx
-sphinxcontrib-bibtex<2.0.0
-pydata-sphinx-theme<0.5
 ipython
 pygments
 bs4
 pandoc
-sphinx_book_theme
-pytest
 ipykernel
-pyrecorder
