--- a/docs/source/_theme/theme.conf
+++ b/docs/source/_theme/theme.conf
@@ -1,7 +1,7 @@
 [theme]
 inherit = pydata_sphinx_theme
 pygments_style = tango
-sidebars = sidebar-search-bs.html, sbt-sidebar-nav.html, sbt-sidebar-footer.html
+sidebars = search-field.html, sbt-sidebar-nav.html, sbt-sidebar-footer.html
 stylesheet = sphinx-book-theme.da26317cf37e5c4af2fa3e6253912353.css
 
 [options]
