--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -16,11 +16,12 @@ jobs:
           python-version: '3.10'
       - name: Install Dependencies
         run: |
-          pip install numpy
+          pip install numpy Cython scipy==1.8.1
           pip install -r tests/requirements.txt
       - name: Install pymoo
         run: |
           pip install .
+          rm -rf pymoo
       - name: Run Tests
         run: |
           cd tests
