--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,11 +25,12 @@ jobs:
         run: |
           cd docs
           make html
+          cd ..
       - name: Upload Documentation
         uses: trendyminds/github-actions-rsync@master
         with:
           RSYNC_OPTIONS: -avzr --delete --exclude '*.ipynb'
-          RSYNC_TARGET: /home/blankjul/pymoo.org/${BRANCH_NAME}
+          RSYNC_TARGET: /home/blankjul/pymoo.org/${BRANCH_NAME}/
           RSYNC_SOURCE: /docs/build/html/*
         env:
           SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
