--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,21 +28,5 @@ jobs:
       - name: Run Tests
         run: |
           cd tests
-          pytest -vv --maxfail 1 --overwrite
-          cd ..
-      - name: Create Documentation
-        run: |
-          cd docs
-          make html
-      - name: Upload Documentation
-        uses: trendyminds/github-actions-rsync@master
-        with:
-          RSYNC_OPTIONS: -avzr --delete --exclude '*.ipynb'
-          RSYNC_TARGET: /home/blankjul/pymoo.org/${BRANCH_NAME}/
-          RSYNC_SOURCE: /docs/build/html/*
-        env:
-          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
-          SSH_USERNAME: ${{secrets.SSH_USERNAME}}
-          SSH_HOSTNAME: ${{secrets.SSH_HOSTNAME}}
-
-
+          pytest -vv --maxfail 1
+          
