--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,11 +1,10 @@
-name: Release
+name: Testing
 on:
   push:
     branches:
-      - master
+      - develop
       - release
-      - main
-
+      - master
 
 jobs:
 
@@ -16,7 +15,7 @@ jobs:
       - name: Install Python 3
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: '3.10'
       - name: Install Dependencies
         run: |
           pip install numpy Cython scipy==1.8.1
@@ -28,5 +27,6 @@ jobs:
       - name: Run Tests
         run: |
           cd tests
-          pytest -vv --maxfail 1
-          
+          pytest -v --maxfail 1 --no-header -m "not long"
+          cd ..
+
