--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
             python-version: "3.11"
 
   build-manylinux:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: RalfG/python-wheels-manylinux-build@v0.7.1-manylinux2010_x86_64
