Another overwrite command in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           name: dist
           path: dist
+          overwrite: true
     strategy:
       matrix:
         os:
