--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
-prune .
-recursive-include pymoo *.py *.pyx *.pxd
-recursive-include pymoo/cython/vendor *.cpp *.h *.py
-include LICENSE Makefile pyproject.toml
+exclude docs/*
+exclude examples/*
+exclude tests/*
+include src/pymoo/cython/*.pyx
+include src/pymoo/cython/*.pxd
+include src/pymoo/cython/vendor/*.cpp
+include src/pymoo/cython/vendor/*.h
