--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
             - name: Check Compilation
               run: |
-                uv run python -c "from pymoo.util.function_loader import is_compiled;print('Compiled Extensions: ', is_compiled())"
+                uv run python -c "import sys; from pymoo.util.function_loader import is_compiled; sys.exit(0 if is_compiled() else 1) "
             - name: Test
               run: |
                 uv run pytest -v --maxfail 1 --no-header -m "not long"
@@ -66,7 +66,8 @@ jobs:
                 CIBW_BUILD_FRONTEND: "build[uv]"
                 CIBW_BUILD: "${{ matrix.build }}${{ matrix.python }}*"
                 CIBW_ARCHS: ${{ matrix.arch }}
-                CIBW_TEST_COMMAND: python -m unittest discover -t {project} -s {project}/tests
+                CIBW_TEST_COMMAND: |
+                  uv run python -c "import sys; from pymoo.util.function_loader import is_compiled; sys.exit(0 if is_compiled() else 1)"
 
             - uses: actions/upload-artifact@v4
               with:
