--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,3 +58,6 @@ dev = [
 [tool.pytest.ini_options]
 addopts = "--tb=short --strict-markers --strict-config"
 testpaths = ["tests"]
+
+[tool.uv]
+required-version = ">=0.6.12"
