not much luck with matplotlib, so drop 32-bit builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,18 +45,13 @@ jobs:
             matrix:
                 os: [windows-latest, ubuntu-latest, macos-latest]
                 python: [39, 310, 311, 312, 313]
-                arch: [auto64, auto32, universal2]
+                arch: [auto64, universal2]
                 build: ["cp"]
                 exclude:
                     - os: ubuntu-latest
                       arch: universal2
                     - os: windows-latest
                       arch: universal2
-                    - os: macos-latest
-                      arch: auto32
-                    - os: ubuntu-latest
-                      python: 313
-                      arch: auto32
         steps:
             - uses: actions/checkout@v4
             - uses: astral-sh/setup-uv@v5
