--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,65 +1,73 @@
 name: Deploy
+
 on:
   push:
     branches:
       - deploy
-      - main
+
 
 
 jobs:
-  build:
-    runs-on: "${{ matrix.os }}"
-    steps:
-      - uses: actions/checkout@v4
-      - name: "Set up Python"
-        uses: actions/setup-python@v5
-        with:
-          python-version: "${{ matrix.python-version }}"
-      - name: "Install dependencies"
-        run: |
-            python -m pip install --upgrade pip
-            pip install setuptools wheel numpy cython
-      - uses: knicknic/os-specific-run@v1.0.4
-        with:
-          linux: "python setup.py sdist"
-          macos: "python setup.py bdist_wheel"
-          windows: "python setup.py bdist_wheel"
-      - uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: dist
-          overwrite: true
+
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os:
-          - windows-latest
-          - macos-latest
-        python-version:
-          - "3.9"
-          - "3.10"
-          - "3.11"
-          - "3.12"
-        include:
-          - os: ubuntu-latest
-            python-version: "3.11"
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
 
-  build-manylinux:
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.23.2
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir dist
+        env:
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_BEFORE_ALL_MACOS: export LDFLAGS="-arch arm64"
+          CIBW_BUILD: cp*
+#          CIBW_BUILD: cp311-*
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.os }}-${{ strategy.job-index }}
+          path: ./dist/*.whl
+
+  build_sdist:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
+
+      - name: Install Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
-      - uses: RalfG/python-wheels-manylinux-build@v0.7.1-manylinux2014_x86_64
+          python-version: '3.11'
+
+      - name: Install Dependencies
+        run: |
+          pip install setuptools
+
+      - name: Install pymoo
+        run: |
+          python setup.py sdist
+
+      - uses: actions/upload-artifact@v4
         with:
-          build-requirements: "cython numpy"
-          pip-wheel-args: "-w ./dist --no-deps"
-          python-versions: "cp39-cp39 cp310-cp310 cp311-cp311"
-      - name: "Remove non-compatible packages"
-        run: "sudo rm dist/*linux_x86_64.whl\n"
-      - uses: actions/upload-artifact@v3
-        with:
-          name: dist
+          name: sdist
           path: dist
-          overwrite: true
+
+  merge:
+    runs-on: ubuntu-latest
+    needs: [build_sdist, build_wheels]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: pymoo
+          delete-merged: true
