--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 exclude docs/*
 exclude examples/*
 exclude tests/*
-include src/pymoo/cython/*.pyx
-include src/pymoo/cython/*.pxd
-include src/pymoo/cython/vendor/*.cpp
-include src/pymoo/cython/vendor/*.h
+include pymoo/cython/*.pyx
+include pymoo/cython/*.pxd
+include pymoo/cython/vendor/*.cpp
+include pymoo/cython/vendor/*.h
