--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ dependencies = [
 requires = ["setuptools>=61.0", "numpy", "Cython>=0.29"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["pymoo"]
+
 [tool.setuptools.dynamic]
 version = { attr = "pymoo.version.__version__" }
 
