update email address

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pymoo"
 description = "Multi-Objective Optimization in Python"
-authors = [{ name = "Julian Blank", email = "blankjul@msu.edu" }]
+authors = [{ name = "Julian Blank", email = "blankjul@outlook.com" }]
 readme = "README.rst"
 license = "Apache-2.0"
 classifiers = [
