--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include src/pymoo/cython/*.pyx
 include src/pymoo/cython/*.pxd
 include src/pymoo/cython/vendor/*.cpp
 include src/pymoo/cython/vendor/*.h
+include Makefile
